tests/__snapshots__/validation-testFileMatch-wrong-option-value-type-stderr.snap.txt
Error: Option 'testFileMatch' requires a value of type list.

  1 | {
  2 |   "testFileMatch": "feature",
    |                    ~~~~~~~~~
  3 |   "failFast": true
  4 | }
  5 | 

      at ./tstyche.config.json:2:20

